Finish layout and routes

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,2 +1,9 @@
-<h1>Yada App</h1>
-<p>Yet another demo app with rails4</p>
+<div class="center hero-unit">
+	<h1>Yada App</h1>
+
+	<h2>This is Yada's home page</h2>
+
+	<%= link_to "Sign up", signup_path, class: "btn btn-large btn-primary" %>
+</div>
+
+<%= link_to image_tag("rails.png", alt: "Rails"), 'http://rubyonrails.org/' %>
